[tool.poetry]
name = "streamlit-sal"
version = "0.1.3"
description = "Style and layout for your Streamlit app using SASS"
authors = ["DataRobot Applications Team <apps-oss@datarobot.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/datarobot-oss/streamlit-sal"
repository = "https://github.com/datarobot-oss/streamlit-sal"
documentation = "https://github.com/datarobot-oss/streamlit-sal"
include = ["README.md", "LICENSE", "streamlit_sal/**"]

[tool.poetry.scripts]
streamlit-sal = "streamlit_sal.scripts.cli:cli"

[tool.poetry.dependencies]
python = "!=3.9.7,>=3.8"
streamlit = ">=1.34.0"
click = "^8.1.7"
libsass = "^0.23.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"